update company info

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,8 @@
         </div>
       </div>
       <div class="row copyright text-center">
-        财神爷爷的运营技术支持由上海诺诺镑客金融信息服务有限公司提供      |      Copyright © nonobank.com 沪ICP备13003999号
+        财神爷爷的运营技术支持由上海诺诺镑客金融信息服务有限公司提供      |      Copyright © nonobank.com 沪ICP备13003999号<br>
+        财神爷爷（上海）金融科技有限公司所有
       </div>
     </footer>
 
